fix category and tags issues: taxonomy vs taxonomyTerm and hero.html file and content-all file

--- a/css/taxonomy.css
+++ b/css/taxonomy.css
@@ -1,7 +1,10 @@
-
 .taxo-body {
     position: relative;
+    padding-top: 80px;
+    min-height: 60vh;
+    box-sizing: border-box;
 }
+
 .taxo-row {
     display: flex;
     justify-content: center;
